# cmake-hello-world

./: .gitignore  CMakeLists.txt  README.md  hello.cpp  main.cpp
include/: Tim.h
src/: a.cpp  b.cpp  c.cpp
